--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "backend",
+  "name": "dish-search-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend service for searching restaurants by dish name",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mysql2": "^3.15.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
